--- a/dashboard/templates/admin/prototype/upload.html
+++ b/dashboard/templates/admin/prototype/upload.html
@@ -4,7 +4,6 @@
 {% load staticfiles %}
 {% block extrastyle %}
   <link rel="stylesheet" type="text/css" href="{% static "admin/dashboard/styles/gov-uk-elements.css" %}"/>
-  <!-- <link rel="stylesheet" type="text/css" href="{% static "admin/dashboard/styles/dropzone.css" %}"/> -->
   <link rel="stylesheet" type="text/css" href="{% static "admin/dashboard/styles/upload.css" %}"/>
 {% endblock %}
 
@@ -18,7 +17,7 @@
 {% endblock %}
 
 {% block content %}
-<div class="pad">
+<div class="pad upload">
 
   <div class="grid-row">
     <div class="column-two-thirds">
