fixes the dumb width and margins thing on admin

--- a/dashboard/assets/admin/dashboard/styles/custom.css
+++ b/dashboard/assets/admin/dashboard/styles/custom.css
@@ -1,7 +1,6 @@
 section#content {
-    margin-left: 0;
-    margin-right: 0;
-    max-width: none;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .util_mt-0 {
