--- a/dashboard/templates/admin/prototype/export.html
+++ b/dashboard/templates/admin/prototype/export.html
@@ -29,80 +29,9 @@
           <label class="form-label" for="id_project">Project:</label>
           <select class="form-control" id="id_project" name="project">
             <option value="" selected="selected">---------</option>
-            <option value="1">Admin / team lead</option>
-            <option value="2">CJSM</option>
-            <option value="3">Design team</option>
-            <option value="4">Admin/Team Lead</option>
-            <option value="5">Business Analysis</option>
-            <option value="6">MOJ Performance Discovery</option>
-            <option value="7">Out Of Hours Work</option>
-            <option value="22">Divorce</option>
-            <option value="23">Family Law - Out of Court Pathway</option>
-            <option value="24">Financial Calculator (Private Family Law)</option>
-            <option value="25">Help with Fees</option>
-            <option value="26">Help with fees</option>
-            <option value="8">Security and Information Assurance</option>
-            <option value="9">Service Assessments (assessors only)</option>
-            <option value="10">Training</option>
-            <option value="11">Admin/Team Lead</option>
-            <option value="12">Digital Capability</option>
-            <option value="13">Digital Justice</option>
-            <option value="14">Notifications</option>
-            <option value="15">Offender details (digital justice/NOMS)</option>
-            <option value="16">Police.uk Strategy Discovery</option>
-            <option value="17">Admin/Team Lead</option>
-            <option value="18">Apply to an ET</option>
-            <option value="19">CFT</option>
-            <option value="20">Civil Claims</option>
-            <option value="21">Digital Case File</option>
-            <option value="27">Judicial Fees Discovery</option>
-            <option value="28">Jury Summons</option>
-            <option value="29">Make a Plea</option>
-            <option value="30">Make a Plea</option>
-            <option value="31">Out of Court Disposals</option>
-            <option value="32">Reform</option>
-            <option value="33">Sustaining Team</option>
-            <option value="40">Correspondence Tool</option>
-            <option value="41">Data visualisation</option>
-            <option value="42">Digital Policy Making</option>
-            <option value="43">HQ and ALB Migration</option>
-            <option value="44">HQ Technical Architect mentoring</option>
-            <option value="34">Tax Tribunals Fees</option>
-            <option value="35">Tribunals Database</option>
-            <option value="36">VIS Welsh Iteration</option>
-            <option value="37">Admin/Team Lead</option>
-            <option value="38">ALBs</option>
-            <option value="39">CJSE/CJSM</option>
-            <option value="45">In Hours Incident Response and Tuning</option>
-            <option value="46">Intranet</option>
-            <option value="47">Intranet</option>
-            <option value="48">MoJ Digital Blog work</option>
-            <option value="49">Out of Court Disposals</option>
-            <option value="50">Out of Hours Support</option>
-            <option value="51">Parliamentary Questions</option>
-            <option value="52">People Finder</option>
-            <option value="53">Platforms</option>
-            <option value="54">Tactical Products</option>
-            <option value="55">Transition</option>
-            <option value="56">Admin/Team Lead</option>
-            <option value="57">Advocate Defence Payments</option>
-            <option value="58">CCCD Roadmap Discovery</option>
-            <option value="59">CLA Public</option>
-            <option value="60">Claim for Crown Court Defence 2</option>
-            <option value="61">Defence Request</option>
-            <option value="62">LAA Discovery</option>
-            <option value="63">Simplification Discovery</option>
-            <option value="64">Personal Time Off</option>
-            <option value="65">Analytics platform</option>
-            <option value="66">Money to Prisoners</option>
-            <option value="67">Moving People Safely</option>
-            <option value="68">nDelius Migration</option>
-            <option value="69">NOMS digital studio</option>
-            <option value="70">PVB</option>
-            <option value="71">PVB API</option>
-            <option value="72">OPG - LPA</option>
-            <option value="73">OPG Digital Deputy Service</option>
-            <option value="74">Non Digital Services work</option>
+            {% for value, display in form.fields.project.choices %}
+                <option value="{{ value }}">{{ display }}</option>
+            {% endfor %}
           </select>
         </div>
 
