add styles for required fields in admin tabular view

--- a/dashboard/assets/admin/dashboard/styles/custom.css
+++ b/dashboard/assets/admin/dashboard/styles/custom.css
@@ -426,3 +426,8 @@ th .help-tooltip {
     width: 15px;
     height: 15px;
 }
+
+th.required::before {
+    content: '*';
+    font-weight: bold;
+}
