--- a/dashboard/assets/styles/main.css
+++ b/dashboard/assets/styles/main.css
@@ -147,11 +147,11 @@ h1 a.button {
 }
 
 .griddle-body thead th {
-    vertical-align: top;
+  vertical-align: top;
 }
 
 .griddle-body .money-value {
-    text-align: right;
+  text-align: right;
 }
 
 .griddle-body th:first-child,
@@ -186,7 +186,9 @@ h1 a.button {
 }
 
 a.print-label {
-  float: right;
+  color: #005ea5;
+  text-decoration: underline;
+  cursor: pointer;
 }
 
 /* print */
