--- a/dashboard/assets/styles/main.css
+++ b/dashboard/assets/styles/main.css
@@ -173,15 +173,15 @@ h1 a.button {
   padding-top: 30px;
 }
 
-.project-row {
+.product-row {
   padding-top: 30px;
 }
 
-.project-row hr {
+.product-row hr {
   margin-top: 0;
 }
 
-.project-row h4 {
+.product-row h4 {
   margin-bottom: 10px;
 }
 
@@ -223,5 +223,49 @@ a.print-label {
   .column-one-quarter {
     float: left;
     width: 25%;
+  }
+
+  .font-xxlarge,
+  .heading-xxlarge,
+  .bold-xxlarge {
+    font-size: 39px;
+  }
+
+  .font-xlarge,
+  .heading-xlarge,
+  .bold-xlarge {
+    font-size: 24px;
+  }
+
+  .font-large,
+  .heading-large,
+  .bold-large {
+    font-size: 20px;
+  }
+
+  .font-medium,
+  .heading-medium,
+  .bold-medium {
+    font-size: 18px;
+  }
+
+  .font-small,
+  .heading-small,
+  .bold-small {
+    font-size: 12px;
+  }
+
+  .font-xsmall,
+  .heading-xsmall,
+  .bold-xsmall {
+    font-size: 10px;
+  }
+
+  .product-row {
+    padding-top: 0px;
+  }
+
+  .product-graph {
+    page-break-after: always;
   }
 }
