sed default date to last month in export form and upload form

--- a/dashboard/templates/admin/prototype/export.html
+++ b/dashboard/templates/admin/prototype/export.html
@@ -24,8 +24,7 @@
             Enter month:
             <span class="form-hint">For example 01 2016</span>
           </label>
-          <input autocomplete="off" class="form-control" id="id_date_month" maxlength="2" name="date_month" placeholder="MM" size="3" type="text">
-          <input autocomplete="off" class="form-control" id="id_date_year" maxlength="4" name="date_year" placeholder="YYYY" size="5" type="text">
+          {{ form.date }}
         </div>
 
         <div class="form-group">
