reason for status

--- a/dashboard/assets/styles/main.css
+++ b/dashboard/assets/styles/main.css
@@ -31,10 +31,21 @@ button.update-from-float {
 }
 
 .status-header {
-  padding-top: 30px;
+  padding-top: 3px;
 }
-.status-header .status-text {
-  margin-bottom: 10px;
+.banner .status-text {
+  /* margin-bottom: 10px; */
+  display: -moz-inline-stack;
+  display: inline-block;
+  margin: 0 8px 0 0;
+  padding: 2px 5px 0;
+  font-family: "nta", Arial, sans-serif;
+  line-height: 1.1428571429;
+  text-transform: none;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  text-decoration: none;
+  color: #fff;
 }
 
 img.rag {
@@ -127,16 +138,16 @@ h1 a.button {
 }
 
 .status-green {
-  color: #006435;
+  background-color: #006435;
 }
 
 .status-amber {
-  color: #F47738;
+  background-color: #F47738;
 
 }
 
 .status-red {
-  color: #B10E1E;
+  background-color: #B10E1E;
 }
 
 .griddle-filter {
