collapse hide inlines on admin change form

--- a/dashboard/templates/admin/change_form.html
+++ b/dashboard/templates/admin/change_form.html
@@ -94,3 +94,7 @@
 </div>
 </form></div>
 {% endblock %}
+
+{% block javascripts %}
+  <script src="/static/admin/dashboard/js/CollapseInline.js"></script>
+{% endblock %}
