--- a/dashboard/assets/admin/dashboard/styles/custom.css
+++ b/dashboard/assets/admin/dashboard/styles/custom.css
@@ -435,3 +435,15 @@ th.required::before {
 .form-row a[rel="external"]:after {
     background-position: right 3px;
 }
+
+div.inline-group div.inline-related fieldset.module h2 {
+    cursor: pointer;
+}
+
+div.inline-group div.inline-related fieldset.module h2::before {
+    content: '-';
+}
+
+div.inline-group div.inline-related fieldset.module h2.expand::before {
+    content: '+';
+}
