--- a/dashboard/templates/common.html
+++ b/dashboard/templates/common.html
@@ -1,6 +1,7 @@
 {% extends 'moj_template_custom/moj_base.html' %}
 
 {% load staticfiles %}
+{% load render_bundle from webpack_loader %}
 
 {% block page_title %}
 
@@ -10,13 +11,13 @@
 
 {% block stylesheets %}
 
-    <link href="{% static 'dist/prototype.css' %}" rel="stylesheet" type="text/css"/>
-    <link href="{% static 'common/common.css' %}" rel="stylesheet" type="text/css"/>
+  {% render_bundle 'main' 'css' %}
+  <link href="{% static 'common/common.css' %}" rel="stylesheet" type="text/css"/>
 
 {% endblock %}
 
 {% block javascripts %}
-    <script src="{% static 'dist/prototype.js' %}"></script>
+  {% render_bundle 'main' 'js' %}
 {% endblock %}
 
 {% block before_content %}
