--- a/dashboard/templates/admin/index.html
+++ b/dashboard/templates/admin/index.html
@@ -26,9 +26,9 @@
                     <th scope="row"><a href="{% url 'admin:person_upload_payroll' %}">Upload payroll</a></th>
                 </tr>
             {% endif %}
-            {% if perms.prototype.adjustmentexport_project %}
+            {% if perms.prototype.adjustmentexport_product %}
                 <tr class="model-">
-                    <th scope="row"><a href="{% url 'admin:project_export' %}">Adjustment Export</a></th>
+                    <th scope="row"><a href="{% url 'admin:product_export' %}">Adjustment Export</a></th>
                 </tr>
             {% endif %}
         </table>
