add buttons for exporting filtered and all projects

--- a/dashboard/assets/styles/main.css
+++ b/dashboard/assets/styles/main.css
@@ -355,6 +355,7 @@ ul.external-links li span.external-link-note:before {
 
 /* Projects exports */
 
-div.projects-export {
-    float: right;
+div.filter-container a.export-button {
+    margin-left: 10px;
+    margin-top: 1px;
 }
