do not display title

--- a/dashboard/templates/admin/base.html
+++ b/dashboard/templates/admin/base.html
@@ -76,7 +76,7 @@
         <div class="{% block coltype %}colM{% endblock %}">
           <div class="pad">
             {% block pretitle %}{% endblock %}
-            {% block content_title %}{% if title %}<h1>{{ title }}</h1>{% endif %}{% endblock %}
+            <!-- {% block content_title %}{% if title %}<h1>{{ title }}</h1>{% endif %}{% endblock %} -->
           </div>
             {% block content %}
                 {% block object-tools %}{% endblock %}
