--- a/dashboard/templates/partials/_ga.html
+++ b/dashboard/templates/partials/_ga.html
@@ -5,7 +5,7 @@
     m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
     })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
-    ga('create', {{ GA_KEY }}, 'auto');
+    ga('create', '{{ GA_KEY }}', 'auto');
     ga('send', 'pageview');
 
   </script>
