--- a/dashboard/templates/admin/dashboard/upload.html
+++ b/dashboard/templates/admin/dashboard/upload.html
@@ -31,12 +31,12 @@
         <p class = errors">{{ form.non_field_errors }}</p>
 
         <div class="form-group">
-          <p class = errors">{{ form.date.errors }}</p>
+          <p class = errors">{{ form.date_range.errors }}</p>
           <label class="form-label" for="payroll_date">
-            Enter month:
-            <span class="form-hint">For example 01 2016</span>
+            Enter date range:
+            <span class="form-hint">For example 01 01 2016 to 31 01 2016</span>
           </label>
-          {{ form.date }}
+          {{ form.date_range }}
         </div>
 
         <p class = errors">{{ form.payroll_file.errors }}</p>
